# gws-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yaml  release-please.yaml
skills/gws-cli/: SKILL.md
src/gws_cli/: __init__.py  auth.py  calendar.py  docs.py  drive.py  main.py
tests/: test_auth.py  test_calendar.py  test_calendar_commands.py  test_calendar_fetch.py  test_calendar_links.py  test_docs.py  test_drive.py  test_drive_download.py
