[project]
name = "gws-cli"
version = "0.2.1"
description = "CLI for reading Google Workspace resources and uploading files to My Drive"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "TAKAHISA Sakai" }
]
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "markdownify>=1.2.2",
    "typer>=0.12",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
gws-cli = "gws_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
